hphp/test/zend/good/ext/session/tests/031.php.skipif
<?php include('skipif.inc');
if (!extension_loaded('hash')) die('skip hash extension not available');