hphp/test/zend/bad/ext/soap/tests/server029.php.skipif
<?php 
	if (php_sapi_name()=='cli') echo 'skip';
	require_once('skipif.inc'); 
?>